--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   user-select: none;
+
+  scrollbar-width: thin;
+  scrollbar-gutter: stable;
 }
 
 a {
@@ -77,6 +80,8 @@ canvas {
 svg {
   color: #213547;
 }
+
+div:has(>.konvajs-content) {}
 
 /* input */
 
